LPS-64535 Fix alignment of the draggable handle icon

--- a/modules/apps/forms-and-workflow/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
@@ -981,6 +981,10 @@ $horizontal-spacing: 35px;
 		right: -20px;
 	}
 
+	.layout-builder-resize-col-draggable-handle .glyphicon-chevron-left {
+		left: 6px;
+	}
+
 	.lfr-ddm-repeatable-add-button {
 		position: absolute;
 		right: 0;
